# wakalyze

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
homebrew-formula/: wakalyze.rb
src/: cli.rs  client.rs  config.rs  core.rs  error.rs  format.rs  main.rs
tests/: cli_integration.rs
